// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranslationSelector renders 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      class="dropdown-toggle btn btn-monospaced btn-secondary"
      style=""
      title="select-translation-language"
      type="button"
    >
      <span
        class="inline-item"
      >
        <svg
          class="lexicon-icon lexicon-icon-en-us"
          role="presentation"
        >
          <use
            xlink:href="#en-us"
          />
        </svg>
      </span>
      <span
        class="btn-section"
      >
        en-US
      </span>
    </button>
  </div>
</div>
`;

exports[`TranslationSelector renders as a language selector 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      class="dropdown-toggle btn btn-monospaced btn-secondary"
      style=""
      title="select-translation-language"
      type="button"
    >
      <span
        class="inline-item"
      >
        <svg
          class="lexicon-icon lexicon-icon-en-us"
          role="presentation"
        >
          <use
            xlink:href="#en-us"
          />
        </svg>
      </span>
      <span
        class="btn-section"
      >
        en-US
      </span>
    </button>
  </div>
</div>
`;

exports[`TranslationSelector renders as a translation selector 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      class="dropdown-toggle btn btn-monospaced btn-secondary"
      style=""
      title="select-translation-language"
      type="button"
    >
      <span
        class="inline-item"
      >
        <svg
          class="lexicon-icon lexicon-icon-en-us"
          role="presentation"
        >
          <use
            xlink:href="#en-us"
          />
        </svg>
      </span>
      <span
        class="btn-section"
      >
        en-US
      </span>
    </button>
  </div>
</div>
`;

exports[`TranslationSelector renders as a translation selector 2`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      class="dropdown-toggle btn btn-monospaced btn-secondary"
      style=""
      title="select-translation-language"
      type="button"
    >
      <span
        class="inline-item"
      >
        <svg
          class="lexicon-icon lexicon-icon-en-us"
          role="presentation"
        >
          <use
            xlink:href="#en-us"
          />
        </svg>
      </span>
      <span
        class="btn-section"
      >
        en-US
      </span>
    </button>
  </div>
</div>
`;

exports[`TranslationSelector renders with a small button 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
      style=""
      title="select-translation-language"
      type="button"
    >
      <span
        class="inline-item"
      >
        <svg
          class="lexicon-icon lexicon-icon-en-us"
          role="presentation"
        >
          <use
            xlink:href="#en-us"
          />
        </svg>
      </span>
      <span
        class="btn-section"
      >
        en-US
      </span>
    </button>
  </div>
</div>
`;
